deployments/superset/superset-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: superset-svc
spec:
  type: LoadBalancer
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
  selector:
    app: superset
