deployments/superset/superset-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset-ui
  namespace: superset-bigdata
  labels:
    name: superset-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: "localhost:8088"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://localhost:8088"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://superset-bigdata.app.sema.df.gov.br"
spec:
  tls:
  - hosts:
    - superset-bigdata.app.sema.df.gov.br
  rules:
  - host: superset-bigdata.app.sema.df.gov.br
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: superset
            port:
              number: 8088
